# VirtualChess

./: .gitmodules  CMakeLists.txt
cmake/: cotire.cmake
resources/: CMakeLists.txt
resources/cpp/: Resources.cpp  Resources.h
resources/meshes/chess/: bishop.ctm  king.ctm  knight.ctm  pawn.ctm  piece.ctm  queen.ctm  rook.ctm
resources/misc/: gameList.txt
resources/rocket/: cursor.rml  games.rml  invader.rcss  invader.tga  login.rml  main.rml  players.rml  rkt.rcss  tutorial.rcss  tutorial.rml
resources/shaders/: Colored.fs  Colored.vs  CubeMap.fs  CubeMap.vs  Distortion.fs  Distortion.vs  Lit.vs  LitColored.fs  LitColored.vs  LitColoredInstanced.vs  LitTextured.fs  LitTextured.vs  MovingThroughSpehereSpace.fs  Simple.vs  Text.fs  Text.vs  Textured.fs  Textured.vs
src/: CMakeLists.txt  Chess.cpp  Chess.h  Colors.cpp  Colors.h  Common.cpp  Common.h  FicsClient.cpp  FicsClient.h  GlStacks.h  GlUtils.cpp  GlUtils.h  GlfwApp.cpp  GlfwApp.h  Gui.cpp  Gui.h  Interaction.cpp  Interaction.h  Main.cpp  Mesh.h  RenderUtils.h  Rift.cpp  Rift.h  Rocket.cpp  Rocket.h  SdlWrapperApp.cpp  SdlWrapperApp.h  SocketClient.h  Stacks.h  Strings.cpp  Strings.h  UiTest.cpp
